# fp-course

./: .gitignore  .stylish-haskell.yaml  stack.yaml
hw0/: hw0.cabal
hw0/src/: Lib.hs
hw1/: hw1.cabal
hw1/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs
hw2/: hw2.cabal
hw2/app/: Main.hs
hw2/src/: Block1.hs  Block2.hs  Block2Task3.hs  Block2Task3b.hs  Block3.hs  Bonuse.hs  Prac.hs  Queue.hs
hw2/test/: Block1Test.hs  Block2Test.hs  Block3Test.hs  Main.hs  QueueTest.hs
hw3/: README.md  blia.sh  example.sh  hw3-exe  hw3.cabal
hw3/app/: Main.hs
hw3/src/: Block1.hs  Block2.hs  DefineDataTypes.hs  OuterCommands.hs  Util.hs  UtilAssignValues.hs  UtilCommands.hs  UtilInnerCommands.hs  UtilParserBase.hs  UtilTestScripts.hs
hw3/test/: Block1Tests.hs  Main.hs  UtilTests.hs
hw4/: README.md  hw4.cabal
hw4/app/: Main.hs
hw4/bench/: Block1Bench.hs  Block2Bench.hs  Block3Bench.hs  Block4Bench.hs  Main.hs
hw4/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  SimpleBlock2.hs  SimpleMult.hs
hw4/test/: Block1Tests.hs  Block2Tests.hs  Block3Tests.hs  Block4Tests.hs  Main.hs
hw5/: hw5.cabal
hw5/src/: Block1.hs  Block5.hs  Block6.hs
hw5/test/: Block5Test.hs
practice/: LICENSE  practice.cabal
practice/src/: Block1.hs  Block2.hs  Block3.hs
project/: LICENSE  README.md  project.cabal
project/app/: Main.hs
project/resources/: config.properties  server.properties
project/src/: Display.hs  Game.hs  Server.hs  Utils.hs  World.hs
project/test/: Main.hs
