name:                 hw2
version:              0.1.0.0
synopsis:             Synopsis for task 2
description:          Task 2 for FP ITMO course

homepage:             https://github.com/glcanvas/fp-hw/tree/master/hw1#readme
license:              MIT
license-file:         LICENSE
author:               Author name here
maintainer:           example@example.com
copyright:            2019 Author name here

category:             Web
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10
tested-with:          GHC == 8.0.1


library
  exposed-modules:    Queue
                      , Block1
                      , Block2
                      , Block2Task3
                      , Block2Task3b
                      , Block3
                      , Bonuse
  other-modules:      Paths_hw2
  hs-source-dirs:     src
  build-depends:      base >=4.7 && <5
                      , mtl
  default-language:   Haskell2010

executable hw2-exe
  main-is:            Main.hs
  other-modules:      Paths_hw2
  hs-source-dirs:     app
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >=4.7 && <5
                      , hw2
  default-language:   Haskell2010

test-suite hw2-test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      QueueTest
                      , Block1Test
                      , Block2Test
                      , Block3Test
                      , Paths_hw2
  hs-source-dirs:      test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >=4.7 && <5
                      , hw2
                      , hspec
  default-language:   Haskell2010
