name:                 hw3
version:              0.1.0.0
synopsis:             Synopsis for task 2
description:          Task 2 for FP ITMO course

homepage:             https://github.com/glcanvas/fp-hw/tree/master/hw1#readme
license:              MIT
license-file:         LICENSE
author:               Author name here
maintainer:           example@example.com
copyright:            2019 Author name here

category:             Web
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10
tested-with:          GHC == 8.0.1


library
  exposed-modules:    Block1
                      , Block2
                      , Util
  other-modules:      Paths_hw3
  hs-source-dirs:     src
  build-depends:      base >=4.7 && <5
                      , mtl
                      , transformers
                      , megaparsec
                      , containers
                      , microlens
                      , microlens-th
                      , lens
                      , exceptions
                      , parser-combinators
                      , directory
                      , MissingH
  default-language:   Haskell2010

executable hw3-exe
  main-is:            Main.hs
  other-modules:      Paths_hw3
  hs-source-dirs:     app
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >=4.7 && <5
                      , hw3
  default-language:   Haskell2010

test-suite hw3-test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      UtilTests
                      , Block1Tests
  hs-source-dirs:      test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >=4.7 && <5
                      , hw3
                      , hspec
                      , mtl
                      , transformers
                      , megaparsec
                      , containers
                      , microlens
                      , microlens-th
                      , lens
                      , exceptions
                      , parser-combinators
  default-language:   Haskell2010
