name:                 hw5
version:              0.1.0.0
synopsis:             Synopsis for task 4
description:          Task 4 for FP ITMO course

homepage:             https://github.com/glcanvas/fp-hw/tree/master/hw1#readme
license:              MIT
license-file:         LICENSE
author:               Author name here
maintainer:           example@example.com
copyright:            2019 Author name here

category:             Web
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >=1.10
tested-with:          GHC == 8.0.1


library
  exposed-modules:    Block1
                      , Block5
  other-modules:      Paths_hw5
  hs-source-dirs:     src
  build-depends:      base >=4.7 && <5
                      , mtl
                      , containers
                      , lens
  default-language:   Haskell2010

executable hw5-exe
  main-is:            Main.hs
  other-modules:      Paths_hw5
  hs-source-dirs:     app
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N6
  build-depends:      base >=4.7 && <5
                      , hw5
  default-language:   Haskell2010

test-suite hw5-test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      Block5Test
  hs-source-dirs:     test
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N6
  build-depends:      base >=4.7 && <5
                      , hw5
                      , hspec
  default-language:   Haskell2010
