name:                practice
version:             0.1.0.0
synopsis:            Synopsis for practice
description:         practice for FP ITMO course

homepage:            https://github.com/glcanvas/fp-hw/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1
                       , Block2
                       , Block3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                       , random
                       , split
                       , transformers
                       , mtl
                       , exceptions
                       , containers
  default-language:    Haskell2010
